<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!--声明工程-->
    <groupId>cn.ziming</groupId>
    <artifactId>ssm-tutorial</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!--基本信息-->
    <description>Demo project for SSM Tutorial</description>
    <modelVersion>4.0.0</modelVersion>
    <name>ssm-tutorial</name>
    <packaging>pom</packaging>

    <!--模块声明-->
    <modules>
        <module>spring</module>
        <module>spring-mvc</module>
        <module>mybatis</module>
        <module>tools</module>
    </modules>

    <!--版本号-->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
        <mysql.version>8.0.17</mysql.version>
        <spring.version>5.1.8.RELEASE</spring.version>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.target>9</maven.compiler.target>
    </properties>
    <!--共有依赖管理-->
    <dependencies>
        <!--测试包全局使用-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <!--解决lombok注解报错-->
                <configuration>
                    <release>9</release>
                    <source>1.9</source>
                    <target>1.9</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>java.xml.ws.annotation</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>